Made components for NavBar. Need to fix routes. Not responsive. Manual entry works

--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,20 @@
+/* ROOT */
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+    --darkgrey: #333333;
+    --metalic: #272727;
+    --white: #fcfcfc;
+    --black: #000000;
   
 }
-
+/* Main components */
 body {
   background-color: whitesmoke;
-}
-
-.bucket-app {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  width: 800px;
-  min-height: 600px;
-  background: black;
-  text-align: center;
-  margin: 32px auto;
-  border-radius: 20px;
-  padding-bottom: 32px;
 }
 
 h1 {
@@ -30,119 +23,39 @@ h1 {
   font-size: 24px;
 }
 
+h2{
+  padding: 8px;
+  font-family: monospace;
+  font-weight: bolder;
+}
+
 h3 {
   margin: auto;
   color: rgb(66, 171, 231);
   font-size: 20px;
 }
 
-.complete {
-  text-decoration: line-through;
-  opacity: 0.4;
-}
-
-.bucket-form {
-  margin-bottom: 32px;
-}
-
-.bucket-input {
-  padding: 14px 32px 14px 16px;
-  border-radius: 4px;
-  border: 2px solid #5d0cff;
-  outline: none;
-  width: 320px;
-  background: transparent;
-  color: #fff;
-}
-
-.bucket-input::placeholder {
-  color: #e2e2e2;
-}
-
-.bucket-button {
-  padding: 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  outline: none;
-  background: #5d0cff;
-  color: #fff;
-  text-transform: capitalize;
-}
-
-.bucket-input.edit {
-  border: 2px solid #149fff;
-}
-
-.bucket-button.edit {
-  background: linear-gradient(
-    90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
-  );
-  padding: 16px 22px;
-}
-
-.bucket-container {
+.flex-container {
   display: flex;
-  flex-direction: row;
-  position: relative;
 }
 
-.bucket-row {
-  display: flex;
-  justify-content: space-between;
+.center-content {
+  justify-content: center;
   align-items: center;
-  margin: 4px auto;
-  color: #fff;
-  padding: 16px;
-  border-radius: 5px;
-  width: 90%;
 }
 
-.low {
-  background: linear-gradient(
-    90deg,
-    rgba(93, 12, 255, 1) 0%,
-    rgba(155, 0, 250, 1) 100%
-  );
-}
+/* Header Specials */
 
-.medium {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 12, 241, 1) 0%,
-    rgba(250, 0, 135, 1) 100%
-  );
-}
+/* NavBar */
 
-.high {
-  background: linear-gradient(
-    90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
-  );
-}
+/* Project */
 
-.icons {
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  cursor: pointer;
-}
+/* Footer */
 
-.delete-icon {
-  margin-right: 5px;
-  color: #fff;
-}
 
-.edit-icon {
-  color: #fff;
-}
 
 /* Dropdown menu */
 
-/* Dropdown Button */
 .dropbtn {
   background-color: #ec5700;
   border-radius: 4px;
